Fixed Navbar Overlapping

--- a/src/app/notifications/notification-style.css
+++ b/src/app/notifications/notification-style.css
@@ -1,5 +1,4 @@
 .main {
     display: grid;
     width: 100dvw;
-    height: 100dvh;
 }
